fix(resourcepack): generate client packs from local assets (#149)
Make ResourcePack generation local-only